Fix some z-index collisions.

--- a/src-built-in/components/assets/css/_windowTitleBar.css
+++ b/src-built-in/components/assets/css/_windowTitleBar.css
@@ -132,6 +132,7 @@ html.desktop-active .fsbl-header-right {
     width: 100%;
     height:100%;
     position: absolute;
+    z-index:30000;
 }
 .fsbl-icon {
     position: relative;
@@ -296,7 +297,6 @@ html.desktop-active .fsbl-linker[hover=true] {
     background-color: var(--tab-inactive-background-color);
     border: var(--tab-border);
     user-select: none;
-    z-index:2147483644;
     box-sizing: border-box;
 }
 
